chore: husky fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,8 @@
     "*.css": "tailwindcss"
   },
   "cSpell.words": [
+    "bunx",
+    "commitlint",
     "Firestore",
     "languagedetector",
     "NEXTAUTH",
