--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "test:coverage": "vitest --coverage",
     "commit": "cz",
     "stylelint": "stylelint **/*.css --fix",
+    "changelog:generate": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "release": "standard-version",
+    "release:dry-run": "standard-version --dry-run",
     "prepare": "husky"
   },
   "dependencies": {
@@ -80,7 +84,8 @@
     "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-react": "^4.6.0",
     "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0",
+    "conventional-changelog-cli": "^5.0.0",
+    "cz-emoji": "^1.3.2-canary.2",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "eslint-config-prettier": "^10.1.5",
@@ -93,6 +98,7 @@
     "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "standard-version": "^9.5.0",
     "stylelint": "^16.21.1",
     "stylelint-config-standard": "^38.0.0",
     "tailwindcss": "^4",
