:sparkles: (auth system and global setting) improve auth system and new page for global setting
improve auth system and new page for global setting and usr management

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,10 +53,12 @@
     "Firestore",
     "languagedetector",
     "NEXTAUTH",
+    "partialize",
     "shadcn",
     "sonner",
     "tabler",
     "turbopack",
+    "uuidv",
     "vaul",
     "VERCEL"
   ]
