:sparkles: (changelog and realease) changelog and release

--- a/package.json
+++ b/package.json
@@ -19,8 +19,22 @@
     "stylelint": "stylelint **/*.css --fix",
     "changelog:generate": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "release": "standard-version",
-    "release:dry-run": "standard-version --dry-run",
+    "changelog:validate": "node scripts/changelog-utils.js validate",
+    "changelog:format": "node scripts/changelog-utils.js format",
+    "changelog:backup": "node scripts/changelog-utils.js backup",
+    "changelog:stats": "node scripts/changelog-utils.js stats",
+    "release": "node scripts/release.js",
+    "release:patch": "node scripts/release.js patch",
+    "release:minor": "node scripts/release.js minor",
+    "release:major": "node scripts/release.js major",
+    "release:prerelease": "node scripts/release.js prerelease",
+    "release:alpha": "node scripts/release.js prerelease --alpha",
+    "release:beta": "node scripts/release.js prerelease --beta",
+    "release:rc": "node scripts/release.js prerelease --rc",
+    "release:dry-run": "node scripts/release.js dry-run",
+    "release:check": "node scripts/release.js check",
+    "release:notes": "node scripts/release-notes.js",
+    "release:notes:save": "node scripts/release-notes.js --save",
     "prepare": "husky",
     "vercel:build": "next build",
     "vercel:dev": "next dev",
